--- a/assets/css/flexslider.css
+++ b/assets/css/flexslider.css
@@ -49,7 +49,13 @@ zoom: 1;}
 
 /* Caption style */
 
-.flex-caption { opacity:0.9; width:46%; margin-left:0;bottom:0; position:absolute;padding:2%; z-index:99;}
+.flex-caption { opacity:0.9; width:70%;
+ margin-left:0;
+ height: 10%;
+ bottom:0; 
+ position:absolute;
+ z-index:99; 
+}
 .flex-caption p{ font-size: 14px !important; line-height: 22px; 
 font-weight:300; color: #fff }
 .flex-caption h2, .flex-caption h4 {
