--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,6 +205,7 @@ header nav {
   color: #777777;
   text-decoration: none;
   text-shadow: none;
+  font-size: 18px;
 }
 
 .navbar .nav > li > a:hover {
@@ -390,8 +391,15 @@ section#bottom {
 	width: 100%;
 	margin-top:-30px;
 }
-
-
+.dct{
+	background: #009CEA!important;
+}
+.dcv{
+	background: #333333!important;
+}
+.dcc{
+	background: #EC4F13!important;
+}
 section#subintro {
 	width: 100%;	
 	color: #fff;
@@ -920,7 +928,11 @@ ul.check-white li {
 	font-style:italic;
 	color:#999999;
 }
-
+.dc{
+	background: #EC4F13;
+	color: #FFF;
+	padding-left: 20px;
+}
 article.blog-post{
 	padding-bottom:20px;
 	margin-bottom:30px;
@@ -928,6 +940,7 @@ article.blog-post{
 }
 p{
  font-size: 20px!important;
+ text-align: justify;
 }
 article .headline{
 	float:left;
@@ -1352,7 +1365,7 @@ footer a:hover {
 
 footer .verybottom {
 	padding-top:30px;
-	background:#0f0f0f;
+	background:#2E1616;
 }
 
 footer .nav-list li, footer .nav-list li a, footer .nav-list li.nav-header {
