--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1764,3 +1764,22 @@ ul.portfolio-area li {
 	}
 
 }
+
+
+/* efecto rezice para mostrar y ocultar contenido de dicv dentro de texto */
+
+.texto {
+		border:1px solid #808080;
+		font-family:Arial;
+		font-size:14px;
+		overflow:hidden;
+		padding:5px;
+		width:300px;
+		display:none;
+		transition: 0.5s ease;
+	}
+	.texto .mas {
+		cursor:pointer;
+		color:blue;
+		font-size:12px;
+	}
